--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "clean": "rimraf dist",
+    "build": "npm run clean && webpack"
   },
   "repository": "https://github.com/StephenGrider/WebpackProject",
   "author": "",
@@ -30,6 +31,7 @@
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.26.1",
     "html-webpack-plugin": "^3.2.0",
+    "rimraf": "^3.0.0",
     "style-loader": "^0.13.1",
     "webpack": "^2.7.0"
   }
