--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "clean": "rimraf dist",
-    "build": "npm run clean && webpack"
+    "build": "npm run clean && webpack",
+    "serve": "webpack-dev-server"
   },
   "repository": "https://github.com/StephenGrider/WebpackProject",
   "author": "",
@@ -33,6 +34,8 @@
     "html-webpack-plugin": "^3.2.0",
     "rimraf": "^3.0.0",
     "style-loader": "^0.13.1",
-    "webpack": "^2.7.0"
+    "webpack": "^2.7.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
