--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "faker": "^3.1.0",
     "lodash": "^4.17.2",
     "react": "15.4.1",
@@ -36,6 +37,7 @@
     "style-loader": "^0.13.1",
     "webpack": "^2.7.0",
     "webpack-cli": "^3.3.9",
+    "webpack-dev-middleware": "^2.0.6",
     "webpack-dev-server": "^2.2.0-rc.0"
   }
 }
